--- a/package.json
+++ b/package.json
@@ -1,34 +1,30 @@
 {
-  "name": "glitch-hello-react",
-  "version": "0.0.5",
-  "description": "A simple React single page app, built with Vite and React.",
+  "name": "animated-highlights-r3f",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "start": "vite",
+    "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.80.4",
+    "@react-three/fiber": "^8.13.7",
+    "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-spring": "^9.7.2",
-    "wouter": "^2.11.0",
-    "react-helmet-async": "^1.3.0",
-    "@vitejs/plugin-react": "^4.0.3"
+    "three": "^0.155.0"
   },
   "devDependencies": {
-    "vite": "^4.0.0"
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
+    "@types/three": "^0.155.0",
+    "@vitejs/plugin-react": "^4.0.3",
+    "vite": "^4.3.8"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead"
-  ],
   "engines": {
-    "node": "14.x"
-  },
-  "repository": {
-    "url": "https://glitch.com/edit/#!/glitch-hello-react"
-  },
-  "glitch": {
-    "projectType": "generated_static"
+    "node": "16.x"
   }
 }
