--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.155.0"
+    "three": "^0.155.0",
+    "@react-three/postprocessing": "^2.15.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
